--- a/MVCTravelReviewApp/Views/Reviews/Index.cshtml
+++ b/MVCTravelReviewApp/Views/Reviews/Index.cshtml
@@ -34,6 +34,6 @@
 
 <p>
     @*@Html.ActionLink("Create New", "Create")*@
-    <a class="nonnav-link" href="/Movies/Create">Create New</a>
+    <a class="nonnav-link" href="/Reviews/Create">Create New</a>
 
 </p>
