--- a/MVCTravelReviewApp/Views/Home/Index.cshtml
+++ b/MVCTravelReviewApp/Views/Home/Index.cshtml
@@ -1,31 +1,27 @@
-﻿@{
+﻿<link href="~/Content/homeindexstyle.css" rel="stylesheet" />
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+
+<h1 id="title">Welcome to J-Star's</br>Adventure Planner!</h1>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-6 col-xs-12">
+        <div class="thumbnail">
+            <h2>Reviews</h2>
+            <p>
+                Here you can view reviews left by other travellers, and use their experiences and advice to help plan your adventure!
+            </p>
+            <p><a class="btn btn-default" href="/Reviews/Index"> Reviews&raquo;</a></p>
+            <a href="~/Views/Reviews/Index.cshtml">~/Views/Reviews/Index.cshtml</a>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6 col-xs-12">
+        <div class="thumbnail">
+            <h2>Categories</h2>
+            <p>Here you may view what types of review categories we list.  Feel free to add your own and contribute as well!</p>
+            <p><a class="btn btn-default" href="/Categories/Index">Categories&raquo;</a></p>
+        </div>
     </div>
 </div>
