--- a/MVCTravelReviewApp/Content/Site.css
+++ b/MVCTravelReviewApp/Content/Site.css
@@ -117,8 +117,8 @@ h3 {
 
 h1 {
     text-align: center;
-    font-family: 'Sansita', sans-serif;
-    color: grey;
+    font-family: 'Pragati Narrow', sans-serif;
+    color: #b77575;
     text-shadow: 1px 1px black;
 }
 
